<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvMacLBL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="@dimen/_10sdp"
        android:paddingTop="@dimen/_10sdp"
        android:text="@string/confirm_mac"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etMacId"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_edittextbox"
            android:gravity="center"
            android:hint="@string/enter_mac_id"
            android:imeOptions="actionDone"
            android:padding="@dimen/_5sdp"
            android:singleLine="true"
            android:textSize="@dimen/_14sdp" />

        <TextView
            android:id="@+id/tvError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorRed" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/btnOK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_5sdp"
            android:backgroundTint="@color/colorPrimary"
            android:gravity="center"
            android:text="@string/confirm"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_10sdp"/>
        <Button
            android:id="@+id/btnScan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_5sdp"
            android:backgroundTint="@color/colorPrimary"
            android:gravity="center"
            android:text="@string/scan"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_10sdp"/>
        <Button
            android:id="@+id/btnCancle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_5sdp"
            android:backgroundTint="@color/colorPrimary"
            android:gravity="center"
            android:text="@string/cancle"
            android:textSize="@dimen/_10sdp"
            android:textColor="@color/colorWhite"/>

    </LinearLayout>

</LinearLayout>
