<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightBlue"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/btnPoleMap"
                android:src="@drawable/left_arrow"
                style="@style/back_button" />

            <TextView
                android:id="@+id/tbTitleLine1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/note"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold"
                android:visibility="visible" />
        </FrameLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginRight="@dimen/_5sdp"
        android:gravity="left"
        android:text="@string/enter_notes"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold"
        android:visibility="visible" />

    <EditText
        android:id="@+id/edtNotes"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100sdp"
        android:layout_margin="@dimen/_5sdp"
        android:background="@drawable/bg_edittextbox_simple"
        android:gravity="top"
        android:hint="@string/hint_notes"
        android:padding="@dimen/_5sdp"
        android:scrollbars="vertical"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/_12sdp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_5sdp"
        android:layout_marginRight="@dimen/_5sdp"
        android:gravity="left"
        android:text="@string/devices"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold"
        android:visibility="visible" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:visibility="visible">

        <TextView
            android:id="@+id/tvPoleDataDisplay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="No Data"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/ivUpdate"
            style="@style/green_btn_style"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:text="@string/update"
            android:textSize="12sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/ivNext"
            style="@style/green_btn_style"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:text="@string/next"
            android:textSize="@dimen/_10sdp" />

        <Button
            android:id="@+id/ivSkipp"
            style="@style/green_btn_style"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:text="@string/skip"
            android:textSize="@dimen/_10sdp"
            android:visibility="visible" />

    </LinearLayout>


</LinearLayout>