<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/ivCameraPreview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:src="@drawable/no_image" />

        <LinearLayout
            android:id="@+id/llcamera_inner_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_gravity="center"
                android:src="@drawable/camera_ios" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_photo"
                android:textSize="@dimen/_12sdp"
                />
        </LinearLayout>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/ivChoose"
            style="@style/green_btn_style"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_30sdp"
            android:text="@string/select"
            android:textSize="@dimen/_12sdp"
            android:visibility="visible" />

        <View
            android:id="@+id/cameraPreviewTempView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:visibility="visible" />

        <Button
            android:id="@+id/ivOk"
            style="@style/green_btn_style"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_30sdp"
            android:text="@string/ok"
            android:textSize="@dimen/_12sdp"
            android:visibility="visible" />

    </LinearLayout>

</LinearLayout>