<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ivsettingBg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:background="@color/colorAccent"
        android:scaleType="fitXY" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tbTitleLine1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/setting"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold" />
            </FrameLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/_8sdp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/capture_pole_id"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_12sdp"
                />

            <com.suke.widget.SwitchButton
                android:id="@+id/sbCapturePoleID"
                android:layout_width="@dimen/_45sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_gravity="center"
                android:layout_marginRight="@dimen/_5sdp"
                app:sb_checked_color="@color/colorGreen"
                app:sb_show_indicator="false"
                app:sb_background="@color/colorGray"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvTextUnitLable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:text="@string/measurment_units"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_12sdp" />

            <info.hoang8f.android.segmented.SegmentedGroup xmlns:segmentedgroup="http://schemas.android.com/apk/res-auto"
                android:id="@+id/segmentMeasurementUnits"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/_5sdp"
                android:orientation="horizontal"
                segmentedgroup:sc_border_width="@dimen/_1sdp"
                segmentedgroup:sc_checked_text_color="@color/colorWhite"
                segmentedgroup:sc_corner_radius="@dimen/_15sdp"
                segmentedgroup:sc_tint_color="@color/colorGreen">

                <RadioButton
                    android:id="@+id/btnMatric"
                    style="@style/RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/metric"
                    android:textColor="@color/colorWhite" />

                <RadioButton
                    android:id="@+id/btnEnglish"
                    style="@style/RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/key_english"
                    android:textColor="@color/colorWhite" />
            </info.hoang8f.android.segmented.SegmentedGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/_8sdp"
                android:layout_weight="1"
                android:text="@string/pole_details_camel_case"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_12sdp" />

            <com.suke.widget.SwitchButton
                android:id="@+id/sbOtherData"
                android:layout_width="@dimen/_45sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_gravity="center"
                android:layout_marginRight="@dimen/_5sdp"
                app:sb_checked_color="@color/colorGreen"
                app:sb_background="@color/colorGray"

                app:sb_show_indicator="false" />
        </LinearLayout>

        <View android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/colorWhite"
            android:layout_marginTop="@dimen/_10sdp"
            android:visibility="visible"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_lang_type"
            android:textColor="@color/colorWhite"
            android:layout_marginLeft="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:textSize="@dimen/_12sdp"/>

        <LinearLayout
            android:id="@+id/llLangSetting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtLangType"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text=""
                android:textColor="@color/colorWhite"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_5sdp"/>

            <ImageView
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:src="@drawable/dropdown"
                android:layout_marginEnd="@dimen/_10sdp"
                android:padding="@dimen/_5sdp"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/map_type"
            android:textColor="@color/colorWhite"
            android:layout_marginLeft="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:textSize="@dimen/_12sdp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvMapType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:visibility="gone">

        </androidx.recyclerview.widget.RecyclerView>


        <LinearLayout
            android:id="@+id/llMapSetting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtMapType"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text=""
                android:textColor="@color/colorWhite"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_5sdp"
                />

            <ImageView
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:src="@drawable/dropdown"
                android:layout_marginEnd="10dp"
                android:padding="5dp"/>

        </LinearLayout>

        <Button
            android:id="@+id/ivLogout"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_30sdp"
            android:text="@string/logout"
            android:layout_gravity="center"
            style="@style/white_btn_style"
            android:textSize="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:textColor="@color/colorBlack"/>

        <TextView
            android:id="@+id/tvVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:layout_gravity="center"
            android:text="Version:"
            android:layout_marginBottom="@dimen/_10sdp"
            android:visibility="visible"
            android:textSize="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"/>
    </LinearLayout>

</FrameLayout>